Add new component parser in signs and item names